<resources>
    <string name="app_name">MeraBills</string>

    <string name="total_amount_equal">Total Amount =</string>
    <string name="total_amount">₹ <b>0</b></string>
    <string name="rupee">₹</string>
    <string name="payments">Payments</string>
    <string name="add_payment"><u>Add Payment</u></string>
    <string name="hint_add_payment">Add Payment</string>
    <string name="save">Save</string>
    <string name="payment_type">Payment type</string>
    <string name="amount">Amount</string>
    <string name="provider">Provider</string>
    <string name="reference">Transaction reference</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="transaction_reference">Transaction Reference</string>
    <string name="provider_icici_citibank_etc">Provider (ICICI, Citibank, etc.)</string>
    <string name="cash">Cash</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="credit_Card">Credit Card</string>
    <string name="amount_is_required">Amount is required</string>
    <string name="provider_is_required">Provider is required</string>
    <string name="transaction_reference_is_required">Transaction reference is required</string>
    <string name="please_enter_valid_amount">Please enter a valid amount</string>
    <string name="please_select_payment_type">Please select a payment type</string>
    <string name="please_enter_provider_name">Please enter provider name</string>
    <string name="please_enter_transaction_reference">Please enter transaction reference</string>
    <string name="all_payment_types_already_added">All payment types already added</string>
    <string name="error_adding_payment">Error adding payment</string>
    <string name="payment_details_saved_successfully">Payment details saved successfully</string>
    <string name="failed_to_save_payment_details">Failed to save payment details</string>

    <array name="payment_type">
        <item>@string/cash</item>
        <item>@string/bank_transfer</item>
        <item>@string/credit_Card</item>
    </array>
</resources>