<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8dp"
    android:background="@drawable/bg_rounded_dialog"
    android:padding="@dimen/_16dp">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextView16"
        android:text="@string/hint_add_payment"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRupee"
        style="@style/TextView16"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/rupee"
        app:layout_constraintBaseline_toBaselineOf="@+id/etAmount"
        app:layout_constraintEnd_toStartOf="@+id/etAmount"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etAmount"
        style="@style/AppEditText"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:hint="@string/amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/tvRupee"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Spinner
        android:id="@+id/spPaymentType"
        style="@style/AppSpinner"
        android:layout_marginTop="@dimen/_16dp"
        android:entries="@array/payment_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAmount" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAdditionalDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spPaymentType"
        tools:visibility="visible">

        <EditText
            android:id="@+id/etProvider"
            style="@style/AppEditText"
            android:hint="@string/provider_icici_citibank_etc"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etTransactionReference"
            style="@style/AppEditText"
            android:layout_marginTop="@dimen/_16dp"
            android:hint="@string/transaction_reference"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etProvider" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clAdditionalDetails">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12dp"
            android:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOk"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>